--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
 
     <footer class="foot">
-      <span id="marquee">✨ Em/Anh/Cường xin chúc mọi người năm mới sức khỏe, may mắn, tiền về như nước ^^✨</span>
+      <span id="marquee">✨ Em/Anh/Cường xin chúc mọi người năm mới sức khỏe thật nhiều may mắn cũng như tiền về như nước ^^✨</span>
     </footer>
   </main>
 
