--- a/index.html
+++ b/index.html
@@ -61,9 +61,17 @@
     </footer>
   </main>
 
-  <audio id="music" loop>
-    <source src="./newyear.mp3" type="audio/mpeg" />
-  </audio>
+ <!-- YouTube background music -->
+<div style="display:none">
+  <iframe
+    width="0"
+    height="0"
+    src="https://www.youtube.com/embed/n8l_j0UKT3Y?autoplay=1&loop=1&playlist=n8l_j0UKT3Y"
+    frameborder="0"
+    allow="autoplay"
+  ></iframe>
+</div>
+
 
   <script src="./app.js"></script>
 </body>
