--- a/index.html
+++ b/index.html
@@ -61,16 +61,7 @@
     </footer>
   </main>
 
- <!-- YouTube background music -->
-<div style="display:none">
-  <iframe
-    width="0"
-    height="0"
-    src="https://www.youtube.com/embed/n8l_j0UKT3Y?autoplay=1&loop=1&playlist=n8l_j0UKT3Y"
-    frameborder="0"
-    allow="autoplay"
-  ></iframe>
-</div>
+<div id="player"></div> <script src="https://www.youtube.com/iframe_api"></script>
 
 
   <script src="./app.js"></script>
