--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <section class="panel">
         <div class="row">
           <div class="field">
-            <label for="name">Tên người nhận</label>
+            <label for="name">Tên mọi người</label>
             <input id="name" placeholder="Ví dụ: Cường" maxlength="30" />
           </div>
 
